fixed widget overflows

--- a/src/assets/styles/main.css
+++ b/src/assets/styles/main.css
@@ -220,6 +220,7 @@ img {
 .entry, .wp-widget {
 	background-image: url(assets/images/subtle-patterns/snow.png);
 	background-position: top center;
+	overflow: hidden;
 }
 
 .entry-media {
